--- a/popup/styles.css
+++ b/popup/styles.css
@@ -2,6 +2,10 @@
 * {
     box-sizing: border-box;
 }
+html {
+    width: max-content;
+    min-width: 270px;
+}
 
 fieldset {
     border: 2px solid #f5f5f5;
